# cli

./: Cargo.toml  install.sh
.github/workflows/: release.yml
src/: api_client.rs  config.rs  credential_store.rs  jj_ops.rs  lib.rs  main.rs  output.rs  repo_context.rs  telemetry.rs  types.rs
src/commands/: agent.rs  api.rs  auth.rs  beta.rs  bookmark.rs  change.rs  completion.rs  config_cmd.rs  issue.rs  label.rs  land.rs  mod.rs  release.rs  repo.rs  run_cmd.rs  search.rs  secret.rs  ssh_key.rs  status.rs  variable.rs  workflow.rs
tests/: cli_api.rs  cli_auth.rs  cli_bookmark.rs  cli_change.rs  cli_completion.rs  cli_issue.rs  cli_jj_ops.rs  cli_label.rs  cli_land.rs  cli_repo.rs  cli_search.rs  cli_secret.rs  cli_ssh_key.rs  cli_status.rs  cli_stub_commands.rs  cli_variable.rs  cli_workflow.rs  test_helpers.rs
tests/common/: mod.rs
