[package]
name = "plue"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "AGPL-3.0-or-later"
description = "CLI for Plue — a jj-native code collaboration platform"
repository = "https://github.com/Plue-AI/cli"
homepage = "https://plue.dev"

[[bin]]
name = "plue"
path = "src/main.rs"

[dependencies]
jj-lib = { version = "0.38.0", features = ["git"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
anyhow = "1"
dirs = "6"
pollster = "0.4"
futures = "0.3"
toml_edit = "0.24"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
